--- a/ads.html
+++ b/ads.html
@@ -24,7 +24,7 @@
 <body>
     <div class="image-container">
         <a href="https://whacairdake.com/4/7309451">
-            <img src="https://i.imgur.com/upM41qP" alt="Responsive Image">
+            <img src="https://i.imgur.com/upM41qP.png" alt="Responsive Image">
         </a>
     </div>
 </body>
