--- a/plyrr.html
+++ b/plyrr.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/bf2610f0a2.js" crossorigin="anonymous"></script>
     <!-- Halfmoon CSS -->
     <link href="https://cdn.jsdelivr.net/gh/halfmoonui/halfmoon@1.0.4/css/halfmoon.min.css" rel="stylesheet" />
-    <title>T20HD - Watch Live T20 Free on T20HD </title>
+    <title>YoSinTV Plyr Player </title>
 
 <script>
 document.addEventListener("DOMContentLoaded",()=> {
