--- a/mid.html
+++ b/mid.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=https://hr.hls-player.net/player.html?src=https://yosintv2.github.io/tv/mid.html?yosintv=custom_id">
+<meta http-equiv="refresh" content="0; url=https://hr.hls-player.net/player.html?src=https://yosintv2.github.io/tv/mid.html?yosintv=id">
 <title>Redirecting...</title>
 </head>
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const customId = urlParams.get('custom_id');
+    const customId = urlParams.get('id');
     const newUrl = `https://hr.hls-player.net/player.html?src=https://yosintv2.github.io/tv/mid.html?yosintv=${customId}`;
     window.location.replace(newUrl);
 </script>
