--- a/mid.html
+++ b/mid.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/mid.html?yosintv=id">
+<meta http-equiv="refresh" content="0; url=https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=https://yosintv2.github.io/tv/mid.html?yosintv=id">
 <title>Redirecting...</title>
 </head>
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = `https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/mid.html?yosintv=${customId}`;
+    const newUrl = `https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=https://yosintv2.github.io/tv/mid.html?yosintv=${customId}`;
     window.location.replace(newUrl);
 </script>
 </body>
 </html>
+
+
+
+https://yosintv2.github.io/tv/ads20.html?newUrl=https://yosintv.github.io/yosintv/mid.html?yosintv=id
+https://yosintv2.github.io/tv/ads20.html?newUrl=https://yosintv.github.io/yosintv/mid.html?yosintv=${customId}
