--- a/foot.html
+++ b/foot.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=https://cm.reducemyweight.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=id">
+<meta http-equiv="refresh" content="0; url=https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=id">
 <title>Redirecting...</title>
 </head>
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = `https://cm.reducemyweight.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=${customId}`;
+    const newUrl = `https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=${customId}`;
     window.location.replace(newUrl);
 </script>
 </body>
