--- a/cric.html
+++ b/cric.html
@@ -9,8 +9,8 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = `https://cm.reducemyweight.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=${customId}`;
-    window.location.replace(newUrl);
+    const newurl = `https://cm.reducemyweight.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newUrl=${customId}`;
+    window.location.replace(newurl);
 </script>
 </body>
 </html>
