--- a/plyrr.html
+++ b/plyrr.html
@@ -47,6 +47,14 @@ document.addEventListener("DOMContentLoaded",()=> {
   }
 });
 </script>
+
+ <script src='https://cdn.dashjs.org/latest/dash.all.min.js'/> 
+ <script src='https://cdn.jsdelivr.net/npm/hls.js@latest'/> 
+ <script src='https://cdn.plyr.io/3.6.2/plyr.polyfilled.js'/> 
+ <link href='https://cdn.plyr.io/3.6.2/plyr.css' rel='stylesheet'/> 
+ <script crossorigin='anonymous' src='https://cdn.plyr.io/3.5.6/demo.js'/> 
+
+             
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
 </head>
