--- a/plyrr.html
+++ b/plyrr.html
@@ -41,6 +41,14 @@
 
 
     
+    <b:if cond='data:content == "false"'>
+      </b:if>
+      <script>
+        var encode = <data:content/>;
+      </script>
+
+
+    
 <script>
 document.addEventListener("DOMContentLoaded",()=> {
   const e = document.querySelector("video"),
