--- a/plyrr.html
+++ b/plyrr.html
@@ -74,7 +74,7 @@ Do not remove this
   div#tabs {} .servers-name { display: flex; clear: both; position: relative; overflow: hidden; width: 100%; background: #000; max-height: 50px; box-sizing: border-box; padding: 0 0px; margin: 0; list-style: none; } button.button { text-align: center; width: 100%; margin: 4px 2px; position: relative; float: right; z-index: 3; flex: 1; box-sizing: border-box; display: flex; align-items: center; justify-content: center; text-align: center; background: #552a86; font-size: 16px; width: 100%; position: relative; cursor: pointer; padding: 5px 5px 7px; border: 0; text-shadow: 0 1px 1px rgb(0 0 0 / 30%); box-shadow: 0 0 0 #d6d6d6; border-radius: 5px; height: 43px; /* overflow: hidden; */ flex: 1; box-sizing: border-box; font-weight: 600; display: flex; align-items: center; justify-content: center; color: #fff!important; } @media screen and (max-width: 640px) { .servers-name { width: 100%; direction: ltr; text-align: center; overflow: auto; overflow-y: auto; overflow-y: auto; overflow-y: hidden; margin: 0 auto; } button.button { display: inline-block; vertical-align: middle; background-image: none; white-space: nowrap; -moz-user-select: none; cursor: pointer; position: relative; margin: 0 3px 0; display: inline-block; vertical-align: middle; background-image: none; white-space: nowrap; -moz-user-select: none; cursor: pointer; position: relative; margin: 0 3px 0; } } button.button.active { background: #9e1414; } button.plyr__control.plyr__control--overlaid { height: 70px !important; width: 70px !important; } .plyr--full-ui.plyr--video .plyr__control--overlaid svg { margin: 0 auto !important; height: 30px !important; width: 30px !important; } .play-wrapper { height: 70px !important; width: 70px !important; border-radius: 50%; } .player-poster[data-poster] .play-wrapper[data-poster] svg { margin: 20px auto !important; height: 30px !important; width: 30px !important; } button.rmp-button.rmp-overlay-button.rmp-color-bg { height: 70px !important; width: 70px !important; border-radius: 50%; text-align: center; } .rmp-i-play::before { height: 30px !important; width: 30px !important; } ::before {} span.rmp-i.rmp-i-play { font-size: 34px; text-align: center; } 
 </style>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
-<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4259690067382183906&amp;zx=0365ed6b-8e6a-49a1-b5f2-e21870904173' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4259690067382183906&amp;zx=0365ed6b-8e6a-49a1-b5f2-e21870904173' rel='stylesheet'/></noscript>
+<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4259690067382183906&amp;zx=514bf26f-ee3c-49c9-a3e8-e9eed29b56cc' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4259690067382183906&amp;zx=514bf26f-ee3c-49c9-a3e8-e9eed29b56cc' rel='stylesheet'/></noscript>
 <meta name='google-adsense-platform-account' content='ca-host-pub-1556223355139109'/>
 <meta name='google-adsense-platform-domain' content='blogspot.com'/>
 
@@ -115,7 +115,6 @@ Do not remove this
 <a class='a2a_button_twitter'></a>
 <a class='a2a_button_email'></a>
 </div>
-<script async='async' src='https://static.addtoany.com/menu/page.js'></script>
 </div>
 <div class='modal-footer p-1'>
 <button class='btn btn-secondary' data-dismiss='modal' type='button'>
@@ -134,7 +133,7 @@ www.yosin-tv.net
 </div><div class='widget HTML' data-version='1' id='HTML206'>
 <script> var posterx = "https://blogger.googleusercontent.com/img/a/AVvXsEgPW62n3GieGxmfl3dOKSs0p1sb9AelxUi7A967d8L82NQYq68_tsDsUdsNXbWhrgy6P7xXQ6nmRlXt0JuyTQDRw5j68jafa3ZhnR_v5q52g41PTk0HcVAlTfcF3G5xr6k5ABqLJ-FZ85vGkK0ip3K7pNEBDQd0DVXv5frMMX0GqRDAo-LrbqFq-djhwuc=s313"; </script>
 </div><div class='widget HTML' data-version='1' id='HTML207'>
-<script> var logox = ""; </script>
+<script> var logox = "https://raw.githubusercontent.com/yosintv/yosintv/main/football/favicon-32x32.png"; </script>
 </div><div class='widget HTML' data-version='1' id='HTML209'>
 <script> var seconds = 3; </script>
 </div>
@@ -176,88 +175,8 @@ www.yosin-tv.net
 
  //]]>
 
-  </script>
-<!--<b:if cond='data:view.isz'> <div id='floating_ads_container'> <div id='floating_ads_wrap'> <div id='floating_ads_bottom_ad'> <ins class='adsbygoogle' data-ad-client='ca-pub-5525538810839147' data-ad-format='auto' data-ad-slot='6441010956' data-full-width-responsive='true' style='display:block'/> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script> <div id='floating_ads_bottom_close'> <a href='#' id='floating_ads_bottom_textcss_x' onclick='document.getElementById(&apos;floating_ads_container&apos;).style.display=&apos;none&apos;;return false;'>&#215;</a> </div> </div></div></div></b:if> <style> #floating_ads_container {position: fixed;bottom: 2px;width: 100%; -webkit-transition: width 1s, height 1s; transition: width 1s, height 1s;z-index:999;} #floating_ads_wrap {text-align: center;} #floating_ads_bottom_ad {display:inline-block;position:relative} #floating_ads_bottom_close {position: absolute;top:-20px;display:block; font-size: 20px; font-weight: bold; text-decoration: none; border-radius:50%; cursor: pointer; text-align: center; height: 25px; width:25px; line-height: 25px; background-color: #ccc;z-index:5; color: #fff! important; right:-10px;} </style>-->
-<style>
- /* Styles for the centered floating ad */
- #floating-ad {
- display: none;
- position: fixed;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- background-color: #fff;
- border: 1px solid #ccc;
- padding: 10px;
- box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
- z-index: 1000;
- }
-
- /* Close button style */
- .close-btn {
- cursor: pointer;
- float: right;
- font-size: 20px;
- font-weight: bold;
- }
- </style>
-<div id='floating-ad'>
-<span class='close-btn' onclick='closeAd()'>&#9421;</span>
-
-      
-   <script type="text/javascript">
-	atOptions = {
-		'key' : '0bf9fa0a59005b4b836444f060321d48',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/0bf9fa0a59005b4b836444f060321d48/invoke.js"></scr' + 'ipt>');
 </script>
-   
-   
-   
-   
-</div>
-<script>
- // Function to show the floating ad after 12 seconds
- setTimeout(function () {
- var floatingAd = document.getElementById('floating-ad');
- floatingAd.style.display = 'block';
- }, 10000); // 7 seconds
 
- // Function to close the floating ad
- function closeAd() {
- var floatingAd = document.getElementById('floating-ad');
- floatingAd.style.display = 'none';
- }
-</script>
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script src='//widget.supercounters.com/ssl/online_i.js' type='text/javascript'></script><script type='text/javascript'>sc_online_i(1665555,"ffffff","000000");</script><br/><noscript><a href='https://www.supercounters.com/'>free online counter</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
-
-<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/848617736-widgets.js"></script>
-<script type='text/javascript'>
-window['__wavt'] = 'AOuZoY647j8Gsk2zTqkEwff0RYqetcRZaw:1713871067135';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d4259690067382183906','//geesportslive.blogspot.com/search?q\x3dplayer1','4259690067382183906');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '4259690067382183906', 'title': 'GeeSports', 'url': 'https://geesportslive.blogspot.com/search?q\x3dplayer1', 'canonicalUrl': 'http://geesportslive.blogspot.com/search?q\x3dplayer1', 'homepageUrl': 'https://geesportslive.blogspot.com/', 'searchUrl': 'https://geesportslive.blogspot.com/search', 'canonicalHomepageUrl': 'http://geesportslive.blogspot.com/', 'blogspotFaviconUrl': 'https://geesportslive.blogspot.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': false, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'en-GB', 'localeUnderscoreDelimited': 'en_gb', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'isDynamicViewsAvailable': true, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22GeeSports - Atom\x22 href\x3d\x22https://geesportslive.blogspot.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22GeeSports - RSS\x22 href\x3d\x22https://geesportslive.blogspot.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22GeeSports - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/4259690067382183906/posts/default\x22 /\x3e\n', 'meTag': '\x3clink rel\x3d\x22me\x22 href\x3d\x22https://www.blogger.com/profile/05162547995156961965\x22 /\x3e\n', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': true, 'adsenseAutoAds': false, 'boqCommentIframeForm': true, 'loginRedirectParam': '', 'view': 'embed', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/32178a08698b1e6b', 'plusOneApiSrc': 'https://apis.google.com/js/platform.js', 'disableGComments': true, 'interstitialAccepted': false, 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'disableGooglePlus': true, 'googlePlusShareButtonWidth': 0, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': false, 'jumpLinkMessage': 'Read more', 'pageType': 'index', 'searchQuery': 'player1', 'pageName': 'Search results for player1', 'pageTitle': 'GeeSports: Search results for player1'}}, {'name': 'features', 'data': {}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard', 'ok': 'Ok', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': true, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'GeeSports', 'description': '', 'url': 'https://geesportslive.blogspot.com/search?q\x3dplayer1', 'type': 'feed', 'isSingleItem': false, 'isMultipleItems': true, 'isError': false, 'isPage': false, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isSearch': true, 'isLabelSearch': false, 'search': {'query': 'player1', 'resultsMessage': 'Showing posts matching the search for player1', 'resultsMessageHtml': 'Showing posts matching the search for \x3cspan class\x3d\x27search-query\x27\x3eplayer1\x3c/span\x3e'}}}, {'name': 'widgets', 'data': [{'title': 'share and reload color', 'type': 'HTML', 'sectionId': 'Colors', 'id': 'HTML301'}, {'title': 'Play button', 'type': 'HTML', 'sectionId': 'Colors', 'id': 'HTML302'}, {'title': 'telegrame message', 'type': 'HTML', 'sectionId': 'Colors', 'id': 'HTML303'}, {'title': 'Share botton and reload', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML203'}, {'title': 'video copyright', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML204'}, {'title': 'Encode links', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML205'}, {'title': 'Poster link', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML206'}, {'title': 'Logo linkk', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML207'}, {'title': 'Ads seconds wait', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML209'}, {'title': 'Ennable AutoPlay', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML211'}, {'title': 'Ennable Vast ads', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML212'}, {'title': 'Vast ads tagUrlx', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML213'}, {'title': 'Publisher id (optionnal)', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML214'}, {'title': 'bitmovin key', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML215'}, {'title': 'Radian key', 'type': 'HTML', 'sectionId': 'Paramerte', 'id': 'HTML216'}, {'title': 'Blog Posts', 'type': 'Blog', 'sectionId': 'main', 'id': 'Blog1', 'posts': [], 'headerByline': {'regionName': 'header1', 'items': [{'name': 'author', 'label': 'Publi\xe9 par'}, {'name': 'timestamp', 'label': '\xe0'}]}, 'footerBylines': [{'regionName': 'footer1', 'items': [{'name': 'comments', 'label': 'commentaires'}, {'name': 'icons', 'label': ''}]}, {'regionName': 'footer2', 'items': [{'name': 'labels', 'label': 'Libell\xe9s :'}]}], 'allBylineItems': [{'name': 'author', 'label': 'Publi\xe9 par'}, {'name': 'timestamp', 'label': '\xe0'}, {'name': 'comments', 'label': 'commentaires'}, {'name': 'icons', 'label': ''}, {'name': 'labels', 'label': 'Libell\xe9s :'}]}]}]);
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML301', 'Colors', document.getElementById('HTML301'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML302', 'Colors', document.getElementById('HTML302'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML303', 'Colors', document.getElementById('HTML303'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML203', 'Paramerte', document.getElementById('HTML203'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML204', 'Paramerte', document.getElementById('HTML204'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML205', 'Paramerte', document.getElementById('HTML205'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML206', 'Paramerte', document.getElementById('HTML206'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML207', 'Paramerte', document.getElementById('HTML207'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML209', 'Paramerte', document.getElementById('HTML209'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML211', 'Paramerte', document.getElementById('HTML211'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML212', 'Paramerte', document.getElementById('HTML212'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML213', 'Paramerte', document.getElementById('HTML213'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML214', 'Paramerte', document.getElementById('HTML214'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML215', 'Paramerte', document.getElementById('HTML215'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML216', 'Paramerte', document.getElementById('HTML216'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'navMessage': 'No posts matching the query: \x3cb\x3eplayer1\x3c/b\x3e. \x3ca href\x3d\x22https://geesportslive.blogspot.com/\x22\x3eShow all posts\x3c/a\x3e', 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/483969729-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/13464135-lightbox_bundle.css'}, 'displayModeFull'));
-</script>
+	
 </body>
 </html>
