--- a/encode.html
+++ b/encode.html
@@ -2,14 +2,11 @@
 <!DOCTYPE html>
 <html dir='ltr' lang='en' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr' xmlns:og='http://ogp.me/ns#'>
 <head>
-<!-- <script>(function(s,u,z,p){s.src=u,s.setAttribute(&#39;data-zone&#39;,z),p.appendChild(s);})(document.createElement(&#39;script&#39;),&#39;https://inklinkor.com/tag.min.js&#39;,6304340,document.body||document.documentElement)</script> <script async='async' data-cfasync='false' src='//ophoacit.com/1?z=5660180'/> -->
-<meta content='wotklhViaDVD2LPjfIZyH3iQnf60G4vtT744BXFvHyU' name='google-site-verification'/>
 <link href='https://fonts.googleapis.com' rel='preconnect'/>
 <link crossorigin='' href='https://fonts.gstatic.com' rel='preconnect'/>
 <link href='https://fonts.googleapis.com/css2?family=Material+Icons' rel='stylesheet'/>
 <link href='https://cdn.jsdelivr.net/gh/iamsinghyogendra/yosintv/rosyotv.css' rel='stylesheet'/>
 <meta content='HLS-Player.net is the perfect destination for anyone seeking a reliable and versatile M3U8 player for streaming HTTP Live Streaming (HLS) video content.' name='description'/>
-<script async='async' crossorigin='anonymous' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147'></script>
 <script type='text/javascript'>
 //<![CDATA[
 if (uri.indexOf("%3D","%3D") > 0) {
@@ -33,7 +30,7 @@ window.history.replaceState({}, document.title, clean_uri);
 }
 //]]>
 </script>
-<title>GeeSports</title>
+<title>YoSinTV Encode Player</title>
 <style id='page-skin-1' type='text/css'><!--
 /*Logo position*/
 img.rmp-logo.rmp-logo-top-left {
@@ -74,9 +71,6 @@ Do not remove this
   div#tabs {} .servers-name { display: flex; clear: both; position: relative; overflow: hidden; width: 100%; background: #000; max-height: 50px; box-sizing: border-box; padding: 0 0px; margin: 0; list-style: none; } button.button { text-align: center; width: 100%; margin: 4px 2px; position: relative; float: right; z-index: 3; flex: 1; box-sizing: border-box; display: flex; align-items: center; justify-content: center; text-align: center; background: #552a86; font-size: 16px; width: 100%; position: relative; cursor: pointer; padding: 5px 5px 7px; border: 0; text-shadow: 0 1px 1px rgb(0 0 0 / 30%); box-shadow: 0 0 0 #d6d6d6; border-radius: 5px; height: 43px; /* overflow: hidden; */ flex: 1; box-sizing: border-box; font-weight: 600; display: flex; align-items: center; justify-content: center; color: #fff!important; } @media screen and (max-width: 640px) { .servers-name { width: 100%; direction: ltr; text-align: center; overflow: auto; overflow-y: auto; overflow-y: auto; overflow-y: hidden; margin: 0 auto; } button.button { display: inline-block; vertical-align: middle; background-image: none; white-space: nowrap; -moz-user-select: none; cursor: pointer; position: relative; margin: 0 3px 0; display: inline-block; vertical-align: middle; background-image: none; white-space: nowrap; -moz-user-select: none; cursor: pointer; position: relative; margin: 0 3px 0; } } button.button.active { background: #9e1414; } button.plyr__control.plyr__control--overlaid { height: 70px !important; width: 70px !important; } .plyr--full-ui.plyr--video .plyr__control--overlaid svg { margin: 0 auto !important; height: 30px !important; width: 30px !important; } .play-wrapper { height: 70px !important; width: 70px !important; border-radius: 50%; } .player-poster[data-poster] .play-wrapper[data-poster] svg { margin: 20px auto !important; height: 30px !important; width: 30px !important; } button.rmp-button.rmp-overlay-button.rmp-color-bg { height: 70px !important; width: 70px !important; border-radius: 50%; text-align: center; } .rmp-i-play::before { height: 30px !important; width: 30px !important; } ::before {} span.rmp-i.rmp-i-play { font-size: 34px; text-align: center; } 
 </style>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
-<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4259690067382183906&amp;zx=514bf26f-ee3c-49c9-a3e8-e9eed29b56cc' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4259690067382183906&amp;zx=514bf26f-ee3c-49c9-a3e8-e9eed29b56cc' rel='stylesheet'/></noscript>
-<meta name='google-adsense-platform-account' content='ca-host-pub-1556223355139109'/>
-<meta name='google-adsense-platform-domain' content='blogspot.com'/>
 
 </head>
 <body class='index mpstyle1 players2 '>
@@ -110,7 +104,6 @@ Do not remove this
 <script> document.getElementById("copy").innerHTML = "<iframe allowfullscreen='true' frameborder='0' height='500px' scrolling='no' src='"+ window.location.href+"' width='100%'></iframe>"; </script>
 </div>
 <div class='a2a_kit a2a_kit_size_32 a2a_default_style text-center w-100 d-flex justify-content-center' data-a2a-url='https://geesportslive.blogspot.com/search?q=player1'>
-<a class='a2a_dd' href='https://www.addtoany.com/share'></a>
 <a class='a2a_button_facebook'></a>
 <a class='a2a_button_twitter'></a>
 <a class='a2a_button_email'></a>
@@ -151,6 +144,9 @@ www.yosin-tv.net
 <script> var radiatoken = 'Kl8lOXN6dmUwN292PWljdjcya3Y3P3JvbTVkYXNpczMwZGIwQSVfKg=='; </script>
 </div></div>
 <div class='main section' id='main'><div class='widget Blog' data-version='1' id='Blog1'>
+
+
+	
 <script>var playon = 'player1';</script>
 <script src='https://cdn.dashjs.org/latest/dash.all.min.js'></script>
 <script src='https://cdn.jsdelivr.net/npm/hls.js@latest'></script>
@@ -166,7 +162,8 @@ www.yosin-tv.net
         
         
 </div></div>
-<script async='async' src='https://www.google-analytics.com/analytics.js' type='text/javascript'></script>
+
+	
 <script>
 //<![CDATA[ 
 
