--- a/encodee.html
+++ b/encodee.html
@@ -86,7 +86,7 @@
 <script>
     // Get the custom ID from the URL parameter
     const urlParams = new URLSearchParams(window.location.search);
-    const customID = urlParams.get('yosintv');
+    const customID = urlParams.get('src');
 
     // Replace (custome_ID) in the original URL with the custom ID
     const originalURL = `https://yosintv2.github.io/ads/encode.html?search?q=yosintv&video_links=${customID}`;
