--- a/ovo.html
+++ b/ovo.html
@@ -5,7 +5,8 @@
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>YoSinTV</title>
-	<link rel='stylesheet' id='penci-style-css'  href='https://yosintv2.github.io/ads/ovo.css' type='text/css' media='all' /><link rel="icon" href="https://easy-sport.tv/test/images/favfav.png" sizes="32x32" />
+	<link rel='stylesheet' id='penci-style-css'  href='https://yosintv2.github.io/ads/ovo.css' type='text/css' media='all' />
+  <link rel="icon" href="https://yosintv.github.io/yosintv/football/favicon-32x32.png" sizes="32x32" />
 <style>.iframe-container{overflow:hidden;padding-top:56.25%;position:relative}.iframe-container iframe{border:0;height:100%;left:0;position:absolute;top:0;width:100%}</style>
 </head>
 <body class="home page-template page-template-page-templates page-template-full-width page-template-page-templatesfull-width-php page wp-custom-logo penci_sticky_content_sidebar js-comp-ver-6.9.0 vc_responsive">
