--- a/ovo.html
+++ b/ovo.html
@@ -336,6 +336,14 @@ atOptions = {
 </div>
 </div>
 <a id="close-sidebar-nav" class="header-1"><i class="fa fa-close"></i></a>
-	<a href="#" id="scroll-to-top"><i class="fa fa-angle-up"></i></a>
+<a href="#" id="scroll-to-top"><i class="fa fa-angle-up"></i></a>
+
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1689558,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+
+
+	
 </body>
 </html>
