--- a/bjm.html
+++ b/bjm.html
@@ -88,7 +88,7 @@
 <script>
     // Get the custom ID from the URL parameter
     const urlParams = new URLSearchParams(window.location.search);
-    const customID = urlParams.get('id');
+    const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
     const originalURL = `https://yosintv2.github.io/ads/plyrr.html?url=https://sports.lvyclv.com/live/m${customID}/playlist.m3u8`;
