--- a/plyrr.html
+++ b/plyrr.html
@@ -126,19 +126,11 @@ $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#b
 <div>
 <a id='close-fixedban' onclick='document.getElementById(&quot;fixedban&quot;).style.display = &quot;none&quot;;' style='cursor:pointer;'>
  <img alt='close' src=' https://cdn.jsdelivr.net/gh/yosintv/yosintv/football/close.gif' style='vertical-align:middle;' title='close button'/></a></div>
-<div style='text-align:center;display:block;max-width:729px;height:auto;overflow:hidden;margin:auto'>
+<div style='text-align:center;display:block;max-width:300px;height:auto;overflow:hidden;margin:auto'>
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '0bf9fa0a59005b4b836444f060321d48',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//hailofficemeasure.com/0bf9fa0a59005b4b836444f060321d48/invoke.js"></script>
-	
+<script type="text/javascript" src="https://kvaaa.com/bnr.php?section=General1&pub=251221&format=300x250&ga=a"></script>
+<noscript><a href="https://yllix.com/publishers/251221" target="_blank">
+<img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>	
         
 </div>
 </div>
