--- a/weakspell.html
+++ b/weakspell.html
@@ -88,7 +88,7 @@
 <script>
     // Get the custom ID from the URL parameter
     const urlParams = new URLSearchParams(window.location.search);
-    const customID = urlParams.get('url');
+    const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
     const originalURL = ` https://weakspell.to/soccer-streams/yosintv/${customID}/?embed=1`;
