--- a/stbw.html
+++ b/stbw.html
@@ -96,6 +96,21 @@
 </script>
 
 
+ <!-- Ads Here-->
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0bf9fa0a59005b4b836444f060321d48',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//hailofficemeasure.com/0bf9fa0a59005b4b836444f060321d48/invoke.js"></script>
+       
+</div>
+</div>
+
         
 </body>
 </html>
