--- a/weakspell.html
+++ b/weakspell.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -97,6 +95,21 @@
     document.getElementById('player-iframe').src = originalURL;
 </script>
 
+
+ <!-- Ads Here-->
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0bf9fa0a59005b4b836444f060321d48',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//hailofficemeasure.com/0bf9fa0a59005b4b836444f060321d48/invoke.js"></script>
+       
+</div>
+</div>
 
         
 </body>
