--- a/plyrr.html
+++ b/plyrr.html
@@ -118,6 +118,20 @@ const player = Plyr.setup('.js-player');
 
 
 
+ <!-- Ads Here-->
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0bf9fa0a59005b4b836444f060321d48',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//hailofficemeasure.com/0bf9fa0a59005b4b836444f060321d48/invoke.js"></script>
+       
+</div>
+</div>
     
 </body>
 </html>
