--- a/bjm.html
+++ b/bjm.html
@@ -98,8 +98,7 @@
 
         
 <!-- Ads Here-->
-<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('ofleafeona.com',7496520,document.createElement('script'))</script>
-	
+<script src="https://atshroomisha.com/pfe/current/tag.min.js?z=7500562" data-cfasync="false" async></script>	
         
 </body>
 </html>
