--- a/bjm.html
+++ b/bjm.html
@@ -98,7 +98,6 @@
 
         
 <!-- Ads Here-->
-<script src="https://atshroomisha.com/pfe/current/tag.min.js?z=7500562" data-cfasync="false" async></script>	
-        
+<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7513426"></script>        
 </body>
 </html>
