--- a/plyrr.html
+++ b/plyrr.html
@@ -118,8 +118,7 @@ const player = Plyr.setup('.js-player');
 
 
 
-<script src="https://atshroomisha.com/pfe/current/tag.min.js?z=7500562" data-cfasync="false" async></script>
-	
+<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7513426"></script>	
     
 </body>
 </html>
