--- a/encodee.html
+++ b/encodee.html
@@ -113,7 +113,7 @@ var hostname = extractHostname(document.referrer);
 var blackdomains = "google.com";
 var blacklist = blackdomains.split("https://www.wicketgoal.com"); 
 
-var whitedomains = "https://yosintv2.github.io/ads/encodee.html";
+var whitedomains = " ";
 var whitelist = whitedomains.split("https://26.reducemyweight.net");
 
 if (isInArray(hostname, blacklist)!document.referrer) {
