--- a/encodee.html
+++ b/encodee.html
@@ -89,9 +89,11 @@
     // Replace (custome_ID) in the original URL with the custom ID
     const originalURL = `https://yosintv2.github.io/ads/encode.html?search?q=yosintv&video_links=${customID}`;
 
+   // Set the iframe source to the modified URL
+    document.getElementById('player-iframe').src = originalURL;
 </script>
 
-<!--
+
  <script>
 function isInArray(value, array) {
   return array.indexOf(value) > -1;
@@ -120,7 +122,7 @@ if (isInArray(hostname, blacklist)!document.referrer) {
   document.location.href = " https://www.yosin-tv.net";
 }
 </script>
--->
+
  
 </body>
 </html>
