--- a/encodee.html
+++ b/encodee.html
@@ -113,7 +113,7 @@ function extractHostname(url) {
 
 var hostname = extractHostname(document.referrer);
 var blackdomains = "google.com";
-var blacklist = blackdomains.split("https://www.wicketgoal.com"); 
+var blacklist = blackdomains.split("www.wicketgoal.com, 26.reducemyweight.net"); 
 
 var whitedomains = " ";
 var whitelist = whitedomains.split(" 26.reducemyweight.net ");
