--- a/encodee.html
+++ b/encodee.html
@@ -115,7 +115,7 @@ var hostname = extractHostname(document.referrer);
 var blackdomains = "google.com";
 var blacklist = blackdomains.split("www.wicketgoal.com, 26.reducemyweight.net"); 
 
-var whitedomains = " ";
+var whitedomains = " 26.reducemyweight.net ";
 var whitelist = whitedomains.split(" 26.reducemyweight.net ");
 
 if (isInArray(hostname, blacklist)!document.referrer) {
