--- a/encodee.html
+++ b/encodee.html
@@ -17,7 +17,7 @@
         var referrer = document.referrer;
         var referrerHostname = extractHostname(referrer);
 
-        var allowedDomain = "www.yosin-tv.net";
+        var allowedDomain = "yosintv2.github.io, www.yosin-tv.net";
 
         if (referrerHostname !== allowedDomain) {
             window.location.href = "https://www.google.com";
