--- a/encodee.html
+++ b/encodee.html
@@ -21,7 +21,7 @@
         var referrer = document.referrer;
         var referrerHostname = extractHostname(referrer);
 
-        var allowedDomains = ["www.yosin-tv.net", "yosintv2.github.io"];
+        var allowedDomains = ["26.reducemyweight.net", "yosintv2.github.io"];
 
         if (!isInArray(referrerHostname, allowedDomains)) {
             window.location.href = "https://www.google.com";
@@ -31,7 +31,6 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href='https://www.yosin-tv.net/favicon.ico' rel='icon' type='image/x-icon'/>
     <title>Encode YoSinTV Player</title>
     <style>
  /*Font Library https://fonts.google.com/ */
